--- a/Creditz-Angular-src/app/home/home.component.html
+++ b/Creditz-Angular-src/app/home/home.component.html
@@ -1,9 +1,9 @@
 
 
-<div style="  height: 400px;
-  line-height: 299px;
+<div style="  height: 100vh;
+  line-height: 50vh;
   text-align: right;
-  margin:4%">
+  margin:5vh">
 
   <span style="   display: inline-block;
   vertical-align: middle;
