--- a/Creditz-Angular-src/app/individual-user-application/individual-user-application.component.html
+++ b/Creditz-Angular-src/app/individual-user-application/individual-user-application.component.html
@@ -8,7 +8,7 @@
       <form #application="ngForm" (ngSubmit)="apply()" method="POST" class="login100-form validate-form" style="border:none;" >
 
       <div class="wrap-input100">
-      <H1>Your Credit Details</H1>
+      <H1 class ="login100-form-title">Your Credit Details...</H1>
                   <span class="focus-input100"></span>
                 <i class="fa fa-envelope" aria-hidden="true"></i>
       </div>
