--- a/Creditz-Angular-src/app/individual-user/individual-user.component.html
+++ b/Creditz-Angular-src/app/individual-user/individual-user.component.html
@@ -1,4 +1,4 @@
-<div style="display: block; min-width: 400px; margin-right:5%; width: 50%; float: right;" >
+<div style="display: block; min-width: 40%; margin-right:2%; width: 50%; float: right; align: center" >
 <br>
 ABOUT Personal User Policies(key points)<br>
 1.FLAT EMI POLICY<br>
@@ -15,11 +15,11 @@ ABOUT Personal User Policies(key points)<br>
 
 </div>
 
-<div style=" display:block; float: left; margin-left:5%; max-width:350px" >
+<div style=" display:block; float: left; max-width:40%" >
 
 <div class="limiter">
 		<div class="container-login100"><br>
-    <H1 aTilt>Calculate Your EMI</H1><br>
+    <H1 class=".login100-form-title " aTilt>Calculate Your EMI</H1><br>
 		<div class="wrap-login100">
 
     <form #calculator="ngForm" (ngSubmit)="calculateEMI()" class="login100-form" style="border:none;" ><br>
