--- a/Creditz-Angular-src/app/header/header.component.html
+++ b/Creditz-Angular-src/app/header/header.component.html
@@ -11,15 +11,20 @@
       </li>
             
       <li class="nav-item">
-        <a class="nav-link" href="aboutUs" >      About Us  </a>
+        <a class="nav-link" href="aboutUs" >      About   Us  </a>
       </li>
 
       <li class="nav-item">
         <a class="nav-link" href="faq" >  FAQ  </a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="ourPolicies" >  Our Policies  </a>
+     <li class="nav-item" >
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href ="ourPolicies">  Our Policies  </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="individual-user">Individual Policies</a>
+             <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="Organizational-User">Organizational Policies</a>
+          </div>
       </li>  
       
       <li class="nav-item" *ngIf="this.store==null">
@@ -43,31 +48,3 @@
     </form>
   </div>
 </nav>
-
-<!--
-<div class="toolbar" role="banner">
-      <img width="100" alt="Angular Logo"
-            src="assets/logo.png" />
-      <span>Welcome!</span>
-      <div class="spacer"></div>
-      <div class="spacer"></div>
-      <div class="spacer"></div>
-
-      <span (click)="goToUrl('home')" class="click">Home</span>
-      <div class="spacer"></div>
-
-      <span (click)="goToUrl('aboutUs')" class="click">About Us</span>
-      <div class="spacer"></div>
-
-      <span (click)="goToUrl('faq')" class="click">FAQ</span>
-      <div class="spacer"></div>
-
-      <span (click)="goToUrl('ourPolicies')" class="click">Our Policies</span>
-      <div class="spacer"></div>
-
-      <span (click)="goToUrl('contactUs')" class="click">Contact Us</span>
-      <div class="spacer"></div>
-
-      <span (click)="goToUrl('login')" style="padding-right:2%;" class="click">Login</span>
-
-</div> -->
