--- a/Creditz-Angular-src/app/login/login.component.html
+++ b/Creditz-Angular-src/app/login/login.component.html
@@ -1,19 +1,14 @@
-<div style="display: block; min-width: 400px; margin-left:29%; width: 100%;" >
+<div style="display: block; min-width: 100%; margin-left:30% ;" >
+
 <div class="limiter">
 		<div class="container-login100">
 		<div class="wrap-login100">
 
-<div style=" float: left;">
-
-
-
-				<div class="container" aTilt >
-					<img src="assets/img-01.png" alt="IMG">
-				</div>
-
+<div style=" float: left; margin:0% " >
+					<img class="login100-pic img" aTilt src="assets/img-01.png" alt="IMG" >
 </div>
 
-<div style=" display:block; float: right;">
+<div style=" float: right; margin:0%">
     <form #loginForm="ngForm" (ngSubmit)="onSubmit()" method="POST" class="login100-form validate-form" style="border:none;" >
 <br>
 <!--   {{ loginForm.value | json}}
@@ -21,14 +16,14 @@
     {{ loginModel|json }} 
     -->
 <br>
-    <div class="wrap-input100 validate-input" placeholder="Email" data-validate = "Valid email is required: ex@abc.xyz">
+    <div class="wrap-input100 validate-input" placeholder="Email" data-validate = "userEmail is required">
       <input type="text" class="input100" name="userEmail" [(ngModel)]="loginModel.userEmail" required>
  						<span class="focus-input100"></span>
 							<i class="fa fa-envelope" aria-hidden="true"></i>
     </div>
 
 
-    <div class="wrap-input100 validate-input" placeholder="Password" data-validate = "Password is required">
+    <div class="wrap-input100 validate-input" placeholder="Password" data-validate = "password is required">
       <input type="password" class="input100" name="password" [(ngModel)]="loginModel.password" required>
   						<span class="focus-input100"></span>
 							<i class="fa fa-lock" aria-hidden="true"></i>
