--- a/Creditz-Angular-src/app/financial-analyst/financial-analyst.component.html
+++ b/Creditz-Angular-src/app/financial-analyst/financial-analyst.component.html
@@ -1,22 +1,113 @@
 <div style="display: block; width: 90%; min-width: 400px; margin-left:41%;">
+  <div class="Creditor-panel">
+  <mat-tab-group animationDuration="1000ms">
+  <mat-tab label ="Top Individual Creditors">
+    
+    <div class="table-responsive">  
+    <table mat-table [dataSource]="dataSource">
+    
+    
+    <ng-container matColumnDef="personId">
+      <th mat-header-cell *matHeaderCellDef> ID</th>
+      <td mat-cell *matCellDef="let person"> {{person.personId}} </td>
+    </ng-container>
+  
+  
+    <ng-container matColumnDef="personName">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let person"> {{person.personName}} </td>
+    </ng-container>
+  
+  
+    <ng-container matColumnDef="contact">
+      <th mat-header-cell *matHeaderCellDef>contact</th>
+      <td mat-cell *matCellDef="let person"> {{person.contact}} </td>
+    </ng-container>
+  
+  
+    <ng-container matColumnDef="address">
+      <th mat-header-cell *matHeaderCellDef>address</th>
+      <td mat-cell *matCellDef="let person"> {{person.address}} </td>
+    </ng-container>
+  
+  
+    <ng-container matColumnDef="#">
+      <th mat-header-cell  *matHeaderCellDef > # </th>
+      <td mat-cell *matCellDef="let person" >
+        <button mat-button class="mat-raised-button mat-primary" [routerLink]="['person-application']"[queryParams]="{userId:person.user.userId}" >Application Details</button>
+    </td>
+    </ng-container>
+    
+  <ng-container matColumnDef="loading">
+          <mat-footer-cell *matFooterCellDef colspan="6">
+            Loading Data...
+         </mat-footer-cell>
+          
+         </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-footer-row *matFooterRowDef="['loading']"[ngClass]="{'hide':dataSource!=null}"></tr>
+  </table> 
+  </div> 
+  </mat-tab>
+  
+    <mat-tab label ="Top Organizational Creditors">
+      <table mat-table [dataSource]="dataSource1">
+    
+    
+        <ng-container matColumnDef="organizationId">
+          <th mat-header-cell *matHeaderCellDef> ID</th>
+          <td mat-cell *matCellDef="let organization"> {{organization.organizationId}} </td>
+        </ng-container>
+      
+      
+        <ng-container matColumnDef="organizationName">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let organization"> {{organization.organizationName}} </td>
+        </ng-container>
+      
+      
+        <ng-container matColumnDef="contact">
+          <th mat-header-cell *matHeaderCellDef>contact</th>
+          <td mat-cell *matCellDef="let organization"> {{organization.contact}} </td>
+        </ng-container>
+      
+      
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef>address</th>
+          <td mat-cell *matCellDef="let organization"> {{organization.address}} </td>
+        </ng-container>
+  
+        
+  
+        <ng-container matColumnDef="directorName">
+          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <td mat-cell *matCellDef="let organization"> {{organization.directorName}} </td>
+        </ng-container>
+        <ng-container matColumnDef="#">
+          <th mat-header-cell  *matHeaderCellDef > # </th>
+          <td mat-cell *matCellDef="let organization" >
+            <button mat-button class="mat-raised-button mat-primary" [routerLink]="['organization-application']"[queryParams]="{userId:organization.user.userId}" >Application Details</button>
+        </td>
+        </ng-container>
 
-<div class="Creditor-panel">
-
-    <br> <h1>Welcome to Dashboard</h1>
-    <br>
-       <mat-tab-group animationDuration="1000ms">
-          <mat-tab label ="Top Individual Creditors">
-            <app-creditor-card-list>
-                     [persons]="topPersons$ | async">
-            </app-creditor-card-list>
-          </mat-tab>
-       <mat-tab label="Top Organizational Creditors">
-               <app-creditor1-card-list
-                     [organizations]="topOrganizations$ | async" >
-               </app-creditor1-card-list>
-          </mat-tab>
-       </mat-tab-group>
- </div>
-   
-</div>
-   
+        <ng-container matColumnDef="loading">
+          <mat-footer-cell *matFooterCellDef colspan="6">
+            Loading Data...
+         </mat-footer-cell>
+          
+         </ng-container>
+  
+         <tr mat-header-row *matHeaderRowDef="displayedColumns1"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns1;"></tr>
+        <tr mat-footer-row *matFooterRowDef="['loading']"[ngClass]="{'hide':dataSource1!=null}"></tr>
+        
+      </table>  
+    </mat-tab>
+  </mat-tab-group>
+  </div>
+  </div>
+  
+  
+  
+  
