--- a/Creditz-Angular-src/app/person-application-list/person-application-list.component.html
+++ b/Creditz-Angular-src/app/person-application-list/person-application-list.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngFor="let personapplicant of personapplicants" class="application-card" mat-elevation-z10>
+<<mat-card *ngFor="let personapplicant of personapplicants" class="application-card" mat-elevation-z10>
 
     <mat-card-header>
     <mat-card-title class="title">ApplicationDetails</mat-card-title>
@@ -11,13 +11,13 @@
         <h1> Loan tenture :{{personapplicant.loanTenture}}</h1>
     
     </mat-card-content>
-   
-    <mat-card-actions class="application-actions">
-    <button mat-button class="mat-raised-button mat-primary" >
-     BACK
+
+</mat-card>
+<br>
+    <mat-card-actions class="application-actions" style="position: absolute;right:    0;    bottom:   0;">
+    <button mat-button class="mat-fab" [routerLink]="['financial-analyst']">
+     Take Me Back
     </button>
 
     </mat-card-actions>
-
-</mat-card>
 
