--- a/Creditz-Angular-src/app/login/login.component.html
+++ b/Creditz-Angular-src/app/login/login.component.html
@@ -17,16 +17,16 @@
     -->
 <br>
     <div class="wrap-input100 validate-input" placeholder="Email" data-validate = "userEmail is required">
-      <input type="text" class="input100" name="userEmail" [(ngModel)]="loginModel.userEmail" required>
+      <input type="text" class="input100"  name="userEmail" [(ngModel)]="loginModel.userEmail" required>
  						<span class="focus-input100"></span>
-							<i class="fa fa-envelope" aria-hidden="true"></i>
+						<!--<i class="fa fa-envelope" aria-hidden="true"></i>-->
     </div>
 
 
     <div class="wrap-input100 validate-input" placeholder="Password" data-validate = "password is required">
-      <input type="password" class="input100" name="password" [(ngModel)]="loginModel.password" required>
-  						<span class="focus-input100"></span>
-							<i class="fa fa-lock" aria-hidden="true"></i>
+    <input type="password" class="input100" name="password" [(ngModel)]="loginModel.password" required>
+						<span class="focus-input100"></span>
+						<!--<i class="fa fa-lock" aria-hidden="true"></i>-->
     </div>
 
     <div class="container-login100-form-btn" >
