--- a/Creditz-Angular-src/app/about-us/creditor-table-list/creditor-table-list.component.html
+++ b/Creditz-Angular-src/app/about-us/creditor-table-list/creditor-table-list.component.html
@@ -1,3 +1,11 @@
+<div style= 
+ " background-image:url(https://tse3.mm.bing.net/th?id=OIP.VIvJsHpORMIBbddVUzlZHgHaEo&pid=Api&P=0&w=253&h=159);
+  background-repeat:no-repeat; 
+  background-position:auto; 
+  background-size:cover;
+  height:100%;
+  padding:30px;"
+>
 <div class="search-div">
     <button mat-raised-button>
       <mat-icon>add</mat-icon> create
@@ -65,6 +73,8 @@
   </table>
   <mat-paginator [pageSizeOptions]="[5,10,25,100]" [pageSize]="5"></mat-paginator>
   
-  </div> 
+  </div>
+  </div>
+  
   
   
