--- a/Creditz-Angular-src/app/creditor-table-list/creditor-table-list.component.css
+++ b/Creditz-Angular-src/app/creditor-table-list/creditor-table-list.component.css
@@ -1,8 +1,13 @@
-table {
-    width: 100%;
+mat-table {
+    width: fit-content;
+  }
+ mat-header-cell 
+ {
+  font-family:'Times New Roman', Times, serif;
+  font-size: 15px;color: darkblue; 
   }
   .mat-tab
-  {
+  /* {
     color: crimson;
   }
   h1{
@@ -13,7 +18,7 @@ table {
    }
    th{
      font-size: 18px;color: darkblue;
-   }
+   } */
    .hide{
      display: none;
    }
@@ -22,18 +27,27 @@ table {
      font-style:italic;
    }
    /* filter control */
-.search-div{
-  margin:10px
+
+.example-header {
+  min-height: 64px;
+  padding: 8px 24px 0;
 }
-.search-form-field
-{
-  width:60%;
-  margin-left:10px;
-  padding:5px 10px;
-  background-color:#f5f5f5;
-  border: radius 5px;
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
 }
-.search-form-field div.mat-form-field-underline{
+.data-container {
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+}
+.mat-table {
+  overflow: auto;
+  max-height: 500px;
+}
+
+/* .search-form-field div.mat-form-field-underline{
   display:none;
 }
 .search-form-field div.mat-form-field-infix{
@@ -48,4 +62,4 @@ table {
 {
   height: 32px;
   width:32px;
-}
+} */
