--- a/Creditz-Angular-src/app/login/login.component.html
+++ b/Creditz-Angular-src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div style="display: block; min-width: 100%; margin-left:30% ;" >
+<div style="display: block; min-width: 100%; " >
 
 <div class="limiter">
 		<div class="container-login100">
